<resources>
    <string name="app_name">Shiners</string>

    <string name="message_na">…</string>

    <string name="message_connected">Connected</string>
    <string name="message_disconnected">Disconnected</string>
    <string name="message_loading_posts">Loading posts</string>

    <string name="message_loading_account">Loading user account</string>

    <string name="message_empty_phone">Please enter phone number</string>
    <string name="message_empty_regCode">Please enter registration code</string>
    <string name="message_city_not_selected">Please select your city</string>
    <string name="title_empty_field">Not all fields are filled</string>
    <string name="city_spinner">Select your city</string>
    <string name="message_loading_chats">Loading conversations</string>
    <string-array name="cities">
        <item>Select your city</item>
        <item>Lipetsk</item>
        <item>Yelets</item>
        <item>Voronezh</item>
    </string-array>

    <string name="message_temporarily_block">The function is temporarily available only to trainers</string>
    <string name="title_temporarily_block">Temporarily not available</string>

    <string name="message_authentication_successful">Success!</string>
    <string name="message_authentication_error">Authentication error</string>
    <string name="message_internal_error">Internal error</string>

    <string name="message_registration_success">Success!</string>
    <string name="message_registration_unsuccessful">Registration failed</string>

    <string name="message_uploading_image">Uploading image…</string>
    <string name="message_logging_out">Logging out</string>
    <string name="message_logging_in">Logging in</string>
    <string name="message_registering">Registering account</string>


    <string name="units_km">km</string>
    <string name="units_m">m</string>
    <string name="units_ft">ft</string>
    <string name="units_mi">mi</string>

    <string name="label_current_location">Current location</string>

    <string name="tab_title_posts">Posts</string>
    <string name="tab_title_me">Me</string>
    <string name="tab_title_messages">Messages</string>
    <string name="tab_title_settings">Settings</string>

    <string name="btn_log_in">Log In</string>
    <string name="btn_register">Register</string>
    <string name="btn_forgot_password">Forgot password?</string>

    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_reg_code">Registration code</string>
    <string name="btn_do_register">Ok</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="hint_email_address">Email address</string>

    <string-array name="chats_list_actions_menu">
        <item>Delete</item>
    </string-array>

    <string-array name="me_list_actions_menu">
        <item>Delete</item>
    </string-array>

    <string-array name="new_post_photos_menu">
        <item>Make this a default photo</item>
        <item>Delete photo</item>
    </string-array>

    <string-array name="post_categories">
        <item>Job market</item>
        <item>Need or provide training</item>
        <item>Looking for connections</item>
        <item>Buy &amp; sell</item>
        <item>Housing market</item>
        <item>Local events</item>
        <item>Need or provide service</item>
        <item>Need or give help</item>
    </string-array>
    
    <string-array name="post_categories_short" translatable="false">
        <item>events</item>
        <item>jobs</item>
        <item>trainings</item>
        <item>connect</item>
        <item>trade</item>
        <item>housing</item>
        <item>services</item>
        <item>help</item>
    </string-array>

    <string-array name="tab_titles">
        <item>Shiners</item>
        <item>Me</item>
        <item></item>
        <item>Messages</item>
        <item>Settings</item>
        <item>Settings</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message_status_delivered">Delivered</string>
    <string name="btn_label_send">Send</string>
    <string name="btn_label_sending">Sending</string>
    <string name="text_hint_message">Message</string>
    <string name="dialogs_list_empty_view_text">There are no messages to display</string>
    <string name="my_posts_list_empty_view_text">You don\'t have any posts. Time to create one?</string>
    <string name="nearby_posts_list_empty_view_text">There are no posts around you</string>
    <string name="title_logout">Log out</string>
    <string name="message_logout_confirmation">Are you sure you wish to log out?</string>
    <string name="btn_label_yes">Yes</string>
    <string name="btl_label_no">No</string>
    <string name="loading_more_messages">Loading more messages…</string>
    <string name="row_posts_loading_label">Loading more posts…</string>
    <string name="row_chats_loading_label">Loading more conversations…</string>

    <string name="lets_begin">Let\'s begin</string>
    <string name="sign_up_to_create_post">Sign up to create post</string>
    <string name="dont_have_an_account">Don\'t have an account? Register here</string>
    <string name="tap_here_to_login">Tap here to LOG IN</string>

    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="my_profile">My Profile</string>
    <string name="notify_me_of_nearby_events">Notify me of nearby events</string>
    <string name="invisible_mode">Invisible mode</string>
    <string name="log_out">Log Out</string>
    <string name="like">Like</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="category">Category</string>
    <string name="trainings">Trainings</string>
    <string name="location">Location</string>
    <string name="tap_here_to_give_post_a_title">Tap here to give post a title</string>
    <string name="optional_provide_more_details">Optional: Provide more details</string>
    <string name="new_post_header">New Post</string>
    <string name="activity_where_lbl_acquiring_location">Acquiring location...</string>
    <string name="activity_where_lbl_select_location">Select location:</string>
    <string name="activity_where_lbl_expl_dynamic_post">It is connected to your mobile phone. Moving along with you.</string>
    <string name="activity_where_lbl_expl_static_post">It is connected to the location that you have chosen.</string>
    <string name="activity_where_lbl_dynamic_post">Dynamic post</string>
    <string name="activity_where_lbl_static_post">Static post</string>
    <string name="activity_new_post_when_exp_1_day">1 day</string>
    <string name="activity_new_post_when_exp_2_days">2 days</string>
    <string name="activity_new_post_when_exp_1_week">1 week</string>
    <string name="activity_new_post_when_exp_2_weeks">2 weeks</string>
    <string name="activity_new_post_when_exp_1_month">1 month</string>
    <string name="activity_new_post_when_exp_1_year">1 year</string>
    <string name="activity_new_post_when_lbl_ad_expires">Pick when your ad expires</string>
    <string name="activity_new_post_when_lbl_or">OR</string>
    <string name="activity_new_post_when_btn_pick_custom_date">Pick custom date</string>
    <string name="activity_new_post_event_when_btn_choose_date">Pick exact date</string>
    <string name="activity_new_post_event_when_btn_choose_time">Pick exact time</string>
    <string name="new_post_wizard_menu_next">Next</string>
    <string name="new_post_wizard_menu_create">Create</string>
    <string name="validation_post_title_empty">Please provide a post title</string>
    <string name="dialog_creating_post">Creating post...</string>
    <string name="toast_error_occurred">An error occurred</string>
    <string name="dialog_deleting_post">Deleting post...</string>
    <string name="phone">Phone</string>
    <string name="not_set">Not set</string>
    <string name="dialog_deleting_dialog">Deleting dialog...</string>
    <string name="toast_unable_to_make_call">Unable to make a call</string>
    <string name="msg_not_logged_in">Not logged in</string>
    <string name="msg_please_log_in_to_send_message">Please log in to send a message</string>
    <string name="msg_log_in">Log in</string>
    <string name="msg_cancel">Cancel</string>
    <string name="hint_message">Message</string>
    <string name="msg_send_message_to">Send message to</string>
    <string name="msg_message_sent">Message sent</string>
    <string name="msg_error_while_sending_message">An error occurred while sending message</string>
    <string name="msg_sending_message">Sending message...</string>
    <string name="menu_posts_add_new">Create Post</string>
    <string name="new_post_photo_error_upload">Error occurred during upload</string>
    <string name="save">Save</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="profile_saved">Profile saved</string>
    <string name="add">Add</string>
    <string name="where_is_it_located">Where is it located?</string>
    <string name="registration">Registration</string>
    <string name="when_does_it_expire">When does it expire?</string>
    <string name="how_does_it_look_like">How does it look like?</string>
    <string name="my_profile_txt_email" translatable="false">Email</string>
    <string name="my_profile_txt_skype" translatable="false">Skype</string>
    <string name="message">Message</string>
    <string name="msg_not_connected">Seems like you are not connected to Internet. Please try again later.</string>
    <string name="title_oops">Oops</string>
    <string name="txt_ok">OK</string>
</resources>
