<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.buzzar.appnative.activities.HomeActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/navigation_container"
        android:layout_weight="1"
        android:orientation="vertical">
    </LinearLayout>

    <android.support.design.widget.TabLayout
        android:layout_width="match_parent"
        android:id="@+id/tabLayout"
        android:layout_height="?android:attr/actionBarSize"
        app:tabTextAppearance="@style/MineCustomTabText"
        android:layout_weight="0">

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/home3x"
            android:text="@string/tab_title_posts" />
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_title_me"
            android:icon="@drawable/my_posts3x"/>
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/shiners_add3x"
            android:tag="shiners:tags.NEW_POST" />
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_title_messages"
            android:icon="@drawable/messages3x"/>
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_title_settings"
            android:icon="@drawable/settings3x"/>
    </android.support.design.widget.TabLayout>
</LinearLayout>
