<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_page_2"
    tools:context=".activities.auth.SplashActivity">


    <TextView
        android:text="@string/dont_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textColor="#fff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:text="@string/lets_begin"
            android:layout_width="wrap_content"
            android:textColor="#fff"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:text="@string/sign_up_to_create_post"
            android:layout_width="wrap_content"
            android:textColor="#fff"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:layout_marginBottom="32dp"
            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:text="@string/tap_here_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login"
            android:layout_marginEnd="64dp"
            android:alpha="0.9"
            android:textColor="#fff"
            android:layout_marginRight="64dp"
            android:layout_marginStart="64dp"
            android:layout_marginLeft="64dp"
            android:backgroundTint="#53ADEB"
            style="@android:style/Widget.Button"
            android:layout_marginTop="16dp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
