<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.auth.RegisterActivity"
    android:background="#58B8F5">

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/activity_new_post_txt_title"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="#fff"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="32dp"
        android:hint="@string/hint_username"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/activity_new_post_txt_description"
        android:backgroundTint="#fff"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="32dp"
        android:hint="@string/hint_email_address"
        app:layout_constraintHorizontal_bias="0.42"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/activity_new_post_txt_title"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editText3"
        android:backgroundTint="#fff"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="32dp"
        android:hint="@string/hint_password"
        app:layout_constraintHorizontal_bias="0.33"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/activity_new_post_txt_description"
        android:inputType="textPassword"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editText4"
        android:backgroundTint="#fff"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="32dp"
        android:hint="@string/hint_confirm_password"
        app:layout_constraintHorizontal_bias="0.04"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        android:inputType="textPassword"/>

    <Button
        android:text="@string/btn_do_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/editText4"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#2E9AE2"
        android:textColor="#fff"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"/>

</android.support.constraint.ConstraintLayout>
