<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_log_in"
    android:layout_width="match_parent"
    android:background="#5CBCF6"
    android:layout_height="match_parent"
    tools:context=".activities.auth.LogInActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/shiners_add3x"
        android:id="@+id/imageView"
        android:tint="#fff"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtUsername"
        android:backgroundTint="#fff"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="32dp"
        android:hint="@string/hint_username"
        />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:backgroundTint="#fff"
        android:id="@+id/txtPassword"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtUsername"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="32dp"
        android:hint="@string/hint_password"
        />

    <Button
        android:text="@string/btn_log_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword"
        android:layout_marginEnd="64dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="64dp"
        android:layout_marginStart="64dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="64dp"
        android:backgroundTint="#2E9AE2"
        android:alpha="0.8"
        android:textAppearance="@style/TextAppearance.AppCompat.Inverse"/>

    <TextView
        android:text="@string/btn_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:textColor="#fff"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        android:layout_marginTop="4dp"/>

    <Button
        android:text="@string/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        android:layout_marginEnd="64dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="64dp"
        android:layout_marginStart="64dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="64dp"
        android:backgroundTint="#2E9AE2"
        android:alpha="0.8"
        android:textAppearance="@style/TextAppearance.AppCompat.Inverse"/>


</android.support.constraint.ConstraintLayout>
